--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,7 @@ jobs:
       - checkout
       - run: npm install --save-dev jest
       - run: npm run test
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
